fix(viz): apply overflow visible to root (#739)

--- a/src/scss/_graph.scss
+++ b/src/scss/_graph.scss
@@ -74,8 +74,8 @@
   }
 }
 
-.elm-build-graph-root {
-  flex: 1;
+svg.elm-build-graph-root {
+  overflow: visible;
 }
 
 .elm-build-graph-error {
